--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,21 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.5.20'
+    ext.lifecycle_version = '2.3.0'
+    ext.coroutines_version = '1.4.2'
+    ext.gson_version = '2.8.6'
+    ext.hilt_version = '2.28-alpha'
+    ext.coil_version = '1.3.2'
+    ext.navigation_version = '2.3.5'
+
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
     }
 }
 
