--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     ext.kotlin_version = '1.5.20'
-    ext.lifecycle_version = '2.3.0'
+    ext.lifecycle_version = '2.3.1'
     ext.coroutines_version = '1.4.2'
+    ext.retrofit_version = '2.9.0'
     ext.gson_version = '2.8.6'
-    ext.hilt_version = '2.28-alpha'
+    ext.hilt_version = '2.38.1'
     ext.coil_version = '1.3.2'
     ext.navigation_version = '2.3.5'
 
@@ -15,7 +16,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
